# sunaba

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  check_budget.py  check_edit_file_desc.py  commit_msg.txt  opencode.jsonc  pyproject.toml  update.sh
.github/workflows/: build-proxy-image.yml  build-sandbox-image.yml  build-sandbox-variants.yml  ci-tests.yml  publish-pypi.yml
docker/: Dockerfile.base  Dockerfile.full  Dockerfile.go  Dockerfile.js  Dockerfile.proxy  Dockerfile.python  Dockerfile.sandbox  Dockerfile.sandbox.minimal  install-go.sh  install-js-tools.sh  install-python-tools.sh
docs/: auth_flow.md  daemon_setup.md  design-issue131-mcp-usability.md  design-multilang-support.md  design.md  design_filesystem_layout.md  design_merge_auto_include.md  design_multilang_support.md  design_package_install.md  design_secret_scan.md  designpackageinstall.md  headless_setup.md  issue-181-followup.md  observability.md  sandbox_image.md  security.md  tools.md  use_cases.md  usecases.md
docs/docker/: INTEGRATION_GUIDE.md
scratch/: e2e-360-a.md  e2e-360-b.md
scripts/: check_patch_targets.py  code-sandbox-mcp.service  fix_patch_targets.py  install-systemd.sh  refactor_aid.py  setup.sh  sunaba.service  update_image_pins.py  update_proxy_pin.py
src/code_sandbox_mcp/: __init__.py  dashboard.py  edit_verify.py  github_auth.py  image_pins.json  image_pins.py  image_selection.py  journal.py  launcher.py  notify.py  output_control.py  proxy.py  proxy_client.py  proxy_entrypoint.py  proxy_lifecycle.py  proxy_pin.json  result_cache.py  security.py  server.py  test_report.py  token.py  token_broker.py  trace.py
src/code_sandbox_mcp/tools/: __init__.py  approval.py  common.py  container.py  diff.py  exec.py  file.py  journal.py  package.py  vcs.py  verify.py
src/sunaba/: __init__.py  auto_checkpoint.py  dashboard.py  edit_verify.py  github_auth.py  image_pins.json  image_pins.py  image_selection.py  journal.py  notify.py  output_control.py  proxy.py  proxy_client.py  proxy_entrypoint.py  proxy_lifecycle.py  proxy_pin.json  search.py  security.py  server.py  test_report.py  token_broker.py  trace.py  undo.py  verify_state.py  workflow_guide.md  workflow_guide.py
src/sunaba/edit_verify/: __init__.py  detect.py  drivers.py  edits.py  fileio.py  gate.py  jstools.py  lint_runners.py  parsers.py  paths.py  results.py  shell.py  single_file.py  test_runners.py
src/sunaba/tools/: common.py  container.py  diff.py  edit_engine.py  exec.py  file.py  github_api.py  journal.py  package.py  publish_ops.py  publish_planner.py  run_python.py  secret_scan.py  vcs.py  verify.py
src/sunaba/tools/container/: __init__.py  clone.py  image.py  lifecycle.py  listing.py  reaper.py
src/sunaba/tools/vcs/: __init__.py  checkpoints.py  gitroot.py  issues.py  merge_base.py  publishing.py
tests/: conftest.py  test_apply_patch.py  test_auto_checkpoint.py  test_branch.py  test_checkpoint.py  test_clone_repo.py  test_container_exec.py  test_container_lifecycle.py  test_container_naming.py  test_copy_tools.py  test_dashboard.py  test_detect_languages.py  test_diff_tool.py  test_edit_apply_patch.py  test_edit_engine.py  test_edit_symbol.py  test_edit_transform.py  test_edit_verify.py  test_exec_tools.py  test_file_size_detection.py  test_file_size_metadata.py  test_fix_patch_targets.py  test_github_api.py  test_github_auth.py  test_image_pins.py  test_image_selection.py  test_issue181_resilience.py  test_issue298_init_leak.py  test_issue303_prewarm.py  test_issue527_containers_page.py  test_issue528_stop_button.py  test_issue550_descriptions.py  test_issue86_repo_tools.py  test_issue_view.py  test_issue_write.py  test_journal.py  test_journal_tools.py  test_js_tool_resolution.py  test_launcher.py  test_lint_parsers.py  (+49 more)
tests/fixtures/: secret_scan_real_output.json
