[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunaba"
version = "0.10.2"
description = "MCP server for Docker sandbox execution with pass-through-env support"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "docker>=7.0.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.0.0",
    "platformdirs>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/masuda-masuo/sunaba"
Changelog = "https://github.com/masuda-masuo/sunaba/blob/main/CHANGELOG.md"
Issues = "https://github.com/masuda-masuo/sunaba/issues"

[project.scripts]
sunaba = "sunaba.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sunaba*"]

[tool.setuptools.package-data]
# Ship the digest pin data files inside the wheel so importlib.resources can
# read them at runtime: image_pins.json (sandbox variants, #331) and
# proxy_pin.json (egress proxy sidecar, #432).  proxy_pin.json may be absent in
# the source tree until CI publishes the first proxy image; the glob simply
# matches nothing then, and load_proxy_pin() treats absence as "use the local
# tag" rather than an error.
sunaba = ["image_pins.json", "proxy_pin.json"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D100", "D101", "D102", "D103", "D104"]
ignore = ["E501"]  # line-too-long: CSS/HTML template strings make this impractical

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
